[tool.poetry]
name = "flask-learning"
version = "0.1.0"
description = ""
authors = ["Deep Sikdar <114486535+ArSid369@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
